Fixed spacing issues

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -164,3 +164,7 @@ footer {
 p.copyright {
     margin: 15px 0 0;
 }
+
+.list-inline>li {
+    margin-bottom: 10px;
+}
